Delete dist folder + rewrite paths

--- a/src/DemoBundle/Resources/views/Default/index.html.twig
+++ b/src/DemoBundle/Resources/views/Default/index.html.twig
@@ -5,12 +5,12 @@
             <h1>Hello World!</h1>
             <p><a href="#example" class="btn btn-info btn-lg fancybox"><span class="glyphicon glyphicon-info-sign"></span> fancyBox</a></p>
         </div>
-    </section> 
+    </section>
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="{{ asset('sources/img/demo/gulp.png') }}" alt="Bootstrap">
+                    <img src="{{ asset('img/demo/gulp.png') }}" alt="Bootstrap">
                     <div class="caption">
                         <h2>Gulp</h2>
                         <p>Build system automating tasks: minification and copying of all JavaScript files, static images, capable of watching files to automatically rerun the task when a file is changed.</p>
@@ -19,7 +19,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="{{ asset('sources/img/demo/bootstrap.png') }}" alt="Gulp">
+                    <img src="{{ asset('img/demo/bootstrap.png') }}" alt="Gulp">
                     <div class="caption">
                         <h2>Bootstrap</h2>
                         <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web.</p>
@@ -28,7 +28,7 @@
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="{{ asset('sources/img/demo/browsersync.png') }}" alt="Browsersync">
+                    <img src="{{ asset('img/demo/browsersync.png') }}" alt="Browsersync">
                     <div class="caption">
                         <h2>Browsersync</h2>
                         <p>Browsersync makes your browser testing workflow faster by synchronising URLs, interactions and code changes across multiple devices. It’s wicked-fast and totally free.</p>
@@ -53,4 +53,3 @@
     });
  </script>
 {% endblock %}
-
