Change Bower directory

--- a/app/Resources/public/styles/bootstrap-custom.scss
+++ b/app/Resources/public/styles/bootstrap-custom.scss
@@ -3,18 +3,18 @@
 $icon-font-path: '/components/bootstrap-sass/assets/fonts/bootstrap/';
 
 /* Core variables and mixins */
-@import "./web/components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
-@import "./web/components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
+@import "../../components/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+@import "../../components/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 
 /* Reset and dependencies */
-@import "./web/components/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
-@import "./web/components/bootstrap-sass/assets/stylesheets/bootstrap/print";
-@import "./web/components/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
+@import "../../components/bootstrap-sass/assets/stylesheets/bootstrap/normalize";
+@import "../../components/bootstrap-sass/assets/stylesheets/bootstrap/print";
+@import "../../components/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
 
 /* Core CSS */
-@import "./web/components/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
-@import "./web/components/bootstrap-sass/assets/stylesheets/bootstrap/type";
-@import "./web/components/bootstrap-sass/assets/stylesheets/bootstrap/grid";
-@import "./web/components/bootstrap-sass/assets/stylesheets/bootstrap/jumbotron";
-@import "./web/components/bootstrap-sass/assets/stylesheets/bootstrap/thumbnails";
-@import "./web/components/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+@import "../../components/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
+@import "../../components/bootstrap-sass/assets/stylesheets/bootstrap/type";
+@import "../../components/bootstrap-sass/assets/stylesheets/bootstrap/grid";
+@import "../../components/bootstrap-sass/assets/stylesheets/bootstrap/jumbotron";
+@import "../../components/bootstrap-sass/assets/stylesheets/bootstrap/thumbnails";
+@import "../../components/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
